hphp/hack/test/typecheck/await_as_an_expression/error/await_as_an_expression_not_async.php
<?hh

async function genx(): Awaitable<int> { return 42; }

function foo(): Awaitable<void> {
  $x = await genx() + 42;
  return $x;
}
